--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     url: jdbc:mysql://192.168.1.86:3306/tests?useUnicode=true&characterEncoding=utf-8&useSSL=false
     driverClassName: com.mysql.jdbc.Driver
     username: root
-    password: 123456
+    password: ******
   jpa:
     hibernate:
       ddl-auto: update
